# first_raytracer

./: .gitmodules  README.md  first_ray.sln
first_ray/: .gitignore  CMakeLists.txt  README.md  SHSample.h  Scene.h  aabb.h  aabb_sse.hpp  aarect.h  ao.cpp  ao.h  ass1_test_scenes.hpp  assignment_1.cpp  assignment_1.hpp  box.h  bvh.h  camera.h  debug_renderer.h  first_ray.vcxproj  first_ray.vcxproj.filters  geometry.h  gl_includes.h  hitable.cpp  hitable.h  hitable_list.cpp  hitable_list.h  image.cpp  image.h  integrator.h  main.cpp  material.h  mesh.h  mesh_loader.cpp  mesh_loader.h  microfacet.h  onb.h  out_test  parallel_bvh.h  path.cpp  path.h  path_prt.cpp  (+25 more)
first_ray/CornellBox/: CornellBox-Empty-CO_jam.mtl
first_ray/Docker/: Dockerfile  entrypoint.sh
first_ray/cube/: plane.mtl
first_ray/data/: test.hdr
first_ray/veach_mi/: mi.exr  veach_mi.mtl
first_ray/vs14_1/: first_ray.sln  first_ray.vcxproj  first_ray.vcxproj.filters
first_ray/vs19/: first_ray.vcxproj  first_ray.vcxproj.filters
